--- a/public/css/star-rating.css
+++ b/public/css/star-rating.css
@@ -50,7 +50,7 @@
 }
 
 .rating-disabled .rating-input, .rating-disabled .rating-stars {
-    cursor: not-allowed;
+    cursor: default;
 }
 
 .rating-container .star {
