--- a/public/css/app.css
+++ b/public/css/app.css
@@ -20,3 +20,12 @@ a:hover{
   top: 0;
   left: 0;
   }
+
+.tags a{
+    color:#ffffff;
+    text-decoration:none;
+}
+
+.tags a:hover{
+    color:#dddddd;
+}
